# projetoCAL

./: .gitignore  CMakeLists.txt  main.cpp
lib/: Application.cpp  Application.h  Estafeta.cpp  Estafeta.h  Graph.h  Trajeto.cpp  Trajeto.h  Vertice.cpp  Vertice.h  main.cpp
resources/: estafetas.txt
resources/GridGraphs/16x16/: clientes.txt  restaurantes.txt
resources/PortugalMaps/PortugalMaps/Aveiro/: clientes_Aveiro.txt  nodes_x_y_Aveiro.txt  restaurantes_Aveiro.txt
